Fixes result spacing

--- a/app/assets/stylesheets/styles/result.scss
+++ b/app/assets/stylesheets/styles/result.scss
@@ -1,4 +1,6 @@
 .result-wrapper {
+  margin-top: 35px;
+  
   > * {
     margin-bottom: 30px;
   }
